# rorschach-delve

./: pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
rorschach_delve/: __main__.py
rorschach_delve/components/delve/: receiver.py
