[tool.poetry]
name = "rorschach-delve"
version = "0.1.0"
description = ""
authors = ["Dante Devenir <dantedevenir@outlook.com>"]
readme = "README.md"
packages = [
        {include = "components", from = "rorschach_delve"},
        {include = "utils", from = "rorschach_delve"},
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
toml = "^0.10.2"
nite_howl = "0.1.29"
sqlalchemy = "^2.0.34"
vtsync = "0.1.3"
mariadb = "^1.1.10"

[[tool.poetry.source]]
name = "vtsync"
url = "https://pkgs.dev.azure.com/mabecenter/inpotras/_packaging/vtsync/pypi/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "nite-howl"
url = "https://pkgs.dev.azure.com/dantedevenir/rorschach/_packaging/nite-howl/pypi/simple"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
ipykernel = "^6.29.5"
mypy = "^1.11.1"
types-toml = "^0.10.8"
pandas_stubs = "^2.2.2"
types_requests = "^2.32.0"
pylint = "^3.2.6"

[[tool.mypy.overrides]]
module = "toml.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"